--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto"> Italo brasileiro, atualmente com 27 anos, formado em engenharia elétrica em 
+            <p class="apresentacao__conteudo__texto"> Ítalo-brasileiro, atualmente com 27 anos, formado em engenharia elétrica em 
                 SP-capital.</p>
-            <p class="apresentacao__conteudo__texto"> Estudante de linguagens de programação com foco em Back-end</p>
+            <p class="apresentacao__conteudo__texto"> Estudante de linguagens de programação com foco em Back-end.</p>
             
 
         </section>
