--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto"> Ítalo-brasileiro, atualmente com 27 anos, formado em engenharia elétrica em 
+            <p class="apresentacao__conteudo__texto"> Italo brasileiro, atualmente com 27 anos, formado em engenharia elétrica em 
                 SP-capital.</p>
-            <p class="apresentacao__conteudo__texto"> Estudante de linguagens de programação com foco em Back-end.</p>
-            
-
+            <p class="apresentacao__conteudo__texto"> Estudante de linguagens de programação, em transição de carreira há 10 meses, venho desenvolvendo diversos projetos para colocar em pratica todo o meu conhecimento absorvido nos cursos feitos até o momento. 
+                Tenho facilidade de aprendizado, boa comunicação e a todo momento busco me aprimorar cada vez mais. </p>
+            <h2 class="apresentacao__conteudo__texto">Tecnologias :</h2>
+            <p class="apresentacao__conteudo__texto">HTML e CSS, JavaScript, Node.js, React.js, Python, MySQL, MongoDB, Git e GitHub</p> 
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/eu.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lucas Costabile.</p>
