--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             class="titulo-destaque"> com um profissional de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Lucas Costabile, desenvolvedor
-            Full Stack com especialidade em Back-end. Ajudo iniciantes em programação a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
+            Full Stack. Atualmente, cursando um bootcamp na CoderHouse.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/LucasCostabile">
@@ -37,7 +35,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/eu.png" alt="Minha foto">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lucas Costabile.</p>
