--- a/about.html
+++ b/about.html
@@ -13,15 +13,27 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto"> Italo brasileiro, atualmente com 27 anos, formado em engenharia elétrica em 
-                SP-capital.</p>
-            <p class="apresentacao__conteudo__texto"> Estudante de linguagens de programação, em transição de carreira há 10 meses, venho desenvolvendo diversos projetos para colocar em pratica todo o meu conhecimento absorvido nos cursos feitos até o momento. 
-                Tenho facilidade de aprendizado, boa comunicação e a todo momento busco me aprimorar cada vez mais. </p>
+            <p class="apresentacao__conteudo__texto"> Italo brasileiro, atualmente com 27 anos, formado em Engenharia Elétrica em 
+                SP-capital com MBA em Gestão Estratégica de Negócios.</p>
+            <p class="apresentacao__conteudo__texto"> 
+                Em transição de carreira há 12 meses, trabalhei 
+                como freelancer durante 6 meses como 
+                desenvolvedor júnior Front-End.
+                Estou aprimorando meus conhecimentos em 
+                um Bootcamp para me tornar um 
+                desenvolvedor Full Stack.
+                Tenho desenvolvido diversos projetos para 
+                colocar em pratica todo o meu conhecimento
+                absorvido nos cursos feitos até o momento. 
+                Tenho facilidade de aprendizado, boa 
+                comunicação e a todo momento busco me 
+                aprimorar cada vez mais </p>
             <h2 class="apresentacao__conteudo__texto">Tecnologias :</h2>
             <p class="apresentacao__conteudo__texto">HTML e CSS, JavaScript, Node.js, React.js, Python, MySQL, MongoDB, Git e GitHub</p> 
         </section>
